modules/terraform-aws-apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 495599733393.dkr.ecr.ap-south-1.amazonaws.com/react_frontend:v1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: env-config
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: env-config
          configMap:
            name: frontend-env





---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
